tests/fails/invalid_table_key_expr.lt
var t = {
   (1 + 2) = 3
}
